src/objects/Credit_Check__c.object
<CustomObject>
    <description>A table that stores the results for any credit check on a customer. 1:M relationship to leads</description>
    <fields>
        <fullName>Blue_Model_Error__c</fullName>
        <description>The Error Message value returned by a Prospect IQ lookup</description>
        <label>Blue Model Error</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Model_Name__c</fullName>
        <description>name of the model used by Prospect IQ to score this check</description>
        <label>Blue Model Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Model_Response__c</fullName>
        <description>This is the actual XML response received back from Prospect IQ. I&apos;ll probably drop this field down the road, but it&apos;ll be a helpful troubleshooting tool for now.</description>
        <label>Blue Model Response</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blue_Model_Result__c</fullName>
        <description>The Result Code from a Prospect IQ lookup</description>
        <label>Blue Model Result</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Model_Score__c</fullName>
        <description>This is actually a numeric value, but since I don&apos;t have any information on the size of this field or the number of decimals, I&apos;m just storing it in a text field for now. This might change at a later date. This is the score returned by Prospect IQ for a blue credit check</description>
        <label>Blue Model Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Model_Tier__c</fullName>
        <description>The tier value return for a blue credit check from Prospect IQ</description>
        <label>Blue Model Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier A</fullName>
                </value>
                <value>
                    <fullName>Tier B</fullName>
                </value>
                <value>
                    <fullName>Tier C</fullName>
                </value>
                <value>
                    <fullName>Tier D</fullName>
                </value>
                <value>
                    <fullName>Tier E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blue_Model_Type__c</fullName>
        <description>Model Type used to score this lead by Prospect IQ</description>
        <label>Blue Model Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Errors__c</fullName>
        <description>Error message return by credit check process when available</description>
        <label>Credit Check Errors</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Method__c</fullName>
        <description>Lists the Credit Source used for this Credit Check</description>
        <label>Credit Check Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>SFCU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Score__c</fullName>
        <description>The actual score value returned by a credit check. This will not be available on all credit sources</description>
        <label>Credit Check Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Value__c</fullName>
        <description>The color code return by the credit check source. This value should always be required.</description>
        <label>Credit Check Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue (No Hit)</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Website Down-No Prescreen</fullName>
                </value>
                <value>
                    <fullName>PO Box</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Scored__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A table that stores the results for any credit check on a customer. 1:M relationship to leads</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Credit Checks</relationshipLabel>
        <relationshipName>Credit_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Credit_Check_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Under certain circumstances, the process to initiate a credit check can be started even though we lack the necessary patient info (name and address) to get good information back. In such a case, we don&apos;t make the call to the credit check vendor and activate this flag to indicate that we pre-empted the credit check.</description>
        <label>No Credit Check Performed</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Check</label>
    <nameField>
        <displayFormat>CCK-{00000}</displayFormat>
        <label>Credit Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>